@@ -111,6 +111,15 @@ Function Get-Java-Opts {
 	return $JAVA_OPTS
 }
 
+Function SetPackageAvailable($packageName) {
+    $PACKAGE_AVAILABLE = $false
+    & $JAVA "--add-opens=$packageName=ALL-UNNAMED" -version >$null 2>&1
+    if ($LastExitCode -eq 0){
+        $PACKAGE_AVAILABLE = $true
+    }
+    return $PACKAGE_AVAILABLE
+}
+
 Function SetEnhancedSecurityManager {
     $ENHANCED_SM = $false
     & $JAVA "-Djava.security.manager=allow" -version >$null 2>&1
@@ -174,6 +183,12 @@ Param(
         $DEFAULT_MODULAR_JVM_OPTIONS += "--add-exports=java.naming/com.sun.jndi.url.ldaps=ALL-UNNAMED"
         # Needed by Netty
         $DEFAULT_MODULAR_JVM_OPTIONS += "--add-exports=jdk.naming.dns/com.sun.jndi.dns=ALL-UNNAMED"
+        # Needed by WildFly Elytron Extension
+        $packageName = "java.base/com.sun.net.ssl.internal.ssl"
+        $PACKAGE_AVAILABLE = setPackageAvailable($packageName)
+        if($PACKAGE_AVAILABLE) {
+            $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=$packageName=ALL-UNNAMED"
+        }
         # Needed if Hibernate applications use Javassist
         $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.base/java.lang=ALL-UNNAMED"
         # Needed by the MicroProfile REST Client subsystem
@@ -182,6 +197,8 @@ Param(
         $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
         # Needed by JBoss Marshalling
         $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.base/java.io=ALL-UNNAMED"
+        # Needed by WildFly Http Client
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.base/java.net=ALL-UNNAMED"
         # Needed by WildFly Security Manager
         $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.base/java.security=ALL-UNNAMED"
         # Needed for marshalling of collections
@@ -362,68 +379,19 @@ Function Start-WildFly-Process {
 			pushd $JBOSS_HOME
 			& $JAVA $programArguments
 			if ($LastExitCode -eq 10){ # :shutdown(restart=true) was called
-			    Write-Host "Restarting..."
+			    Write-Host "INFO: Restarting..."
 				Start-WildFly-Process -programArguments $programArguments
-			}
-
+			} elseif ($LastExitCode -eq 20) { # :shutdown(perform-installation=true) was called
+                Write-Host "INFO: Executing the installation manager"
+                & "$JBOSS_HOME\bin\installation-manager.ps1" -installationHome "$JBOSS_HOME" -instMgrLogProperties "$JBOSS_CONFIG_DIR\logging.properties"
+                Write-Host "INFO: Restarting..."
+                Start-WildFly-Process -programArguments $programArguments
+            }
 		}finally{
 			popd
 		}
 	}
 	Env-Clean-Up
-}
-
-# Returns java -version output for JDK defined by java opts
-Function Get-Java-Version ($javaOpts) {
-    if ($javaOpts -match '-d64') {
-        $opt_version = '-d64'
-    } elseif ($javaOpts -match '-d32') {
-        $opt_version = '-d32'
-    }
-
-    $result = & $JAVA $opt_version -version 2>&1
-    if ($LASTEXITCODE -eq 1) {
-        $result = & $JAVA -version 2>&1
-    }
-
-    return $result
-}
-
-# Check if can set option to use HotSpot VM
-Function Is-Java-Server-Option ($javaOpts) {
-    if ( -Not ($javaOpts -match '-server') ) {
-        # Check user requested JDK 'data model'
-        $version = Get-Java-Version ($javaOpts)
-
-        # Check if data model is supported by JDK
-        # Check for SUN(tm) JVM w/ HotSpot support
-        # Check for OpenJDK JVM w/server support
-        if ($LASTEXITCODE -eq 1) {
-            Write-Host $version
-        } elseif ($version -match 'HotSpot' -or $version -match 'OpenJDK' -or $version -match 'IBM J9') {
-            return $true
-        }
-    }
-
-    return $false
-}
-
-# For stanalone mode, check if client option could be set, if not try to set server option
-Function Set-Java-Client-Option ($javaOpts) {
-    if ( -Not($javaOpts -match '-server') -and -Not($javaOpts -match '-client') ) {
-        # Check user requested JDK 'data model'
-        $version = Get-Java-Version ($javaOpts)
-
-        if ($LASTEXITCODE -eq 1) {
-            Write-Host $version
-        } elseif ($version -match 'Client VM') {
-            $javaOpts = ,"-client" + $javaOpts
-        } elseif ($version -match 'hotspot' -or $version -match 'openJDK' -or $version -match 'IBM J9') {
-            $javaOpts = ,"-server" + $javaOpts
-        }
-    }
-
-    return $javaOpts
 }
 
 Function Set-Global-Variables {
