@@ -12,6 +12,15 @@ if [ -r "$COMMON_CONF" ]; then
   . "$COMMON_CONF"
 fi
 
+setPackageAvailable() {
+  PACKAGE_STRING=`"$JAVA" --add-opens=$1=ALL-UNNAMED -version 2>&1 | $GREP "WARNING"`
+  if [ "x$PACKAGE_STRING" = "x" ]; then
+     PACKAGE_AVAILABLE=true
+  else
+     PACKAGE_AVAILABLE=false
+  fi
+}
+
 setEnhancedSecurityManager() {
   "$JAVA" -Djava.security.manager=allow -version > /dev/null 2>&1 && ENHANCED_SM=true || ENHANCED_SM=false
 }
@@ -31,7 +40,7 @@ setModularJdk() {
 setDefaultModularJvmOptions() {
   setModularJdk
   if [ "$MODULAR_JDK" = "true" ]; then
-    DEFAULT_MODULAR_JVM_OPTIONS=`echo $* | $GREP "\-\-add\-modules"`
+    DEFAULT_MODULAR_JVM_OPTIONS=`echo $* | $GREP "\--add-modules"`
     if [ "x$DEFAULT_MODULAR_JVM_OPTIONS" = "x" ]; then
       # Set default modular jdk options
       # NB: In case an update is made to these exports and opens, make sure that bootable-jar/boot/pom.xml and cli/pom.xml script is in sync.
@@ -44,6 +53,12 @@ setDefaultModularJvmOptions() {
       DEFAULT_MODULAR_JVM_OPTIONS="$DEFAULT_MODULAR_JVM_OPTIONS --add-exports=java.naming/com.sun.jndi.url.ldaps=ALL-UNNAMED"
       # Needed by Netty
       DEFAULT_MODULAR_JVM_OPTIONS="$DEFAULT_MODULAR_JVM_OPTIONS --add-exports=jdk.naming.dns/com.sun.jndi.dns=ALL-UNNAMED"
+      # Needed by WildFly Elytron Extension
+      PACKAGE_NAME="java.base/com.sun.net.ssl.internal.ssl"
+      setPackageAvailable $PACKAGE_NAME
+      if [ "$PACKAGE_AVAILABLE" = "true" ]; then
+        DEFAULT_MODULAR_JVM_OPTIONS="$DEFAULT_MODULAR_JVM_OPTIONS --add-opens=$PACKAGE_NAME=ALL-UNNAMED"
+      fi
       # Needed if Hibernate applications use Javassist
       DEFAULT_MODULAR_JVM_OPTIONS="$DEFAULT_MODULAR_JVM_OPTIONS --add-opens=java.base/java.lang=ALL-UNNAMED"
       # Needed by the MicroProfile REST Client subsystem
@@ -52,6 +67,8 @@ setDefaultModularJvmOptions() {
       DEFAULT_MODULAR_JVM_OPTIONS="$DEFAULT_MODULAR_JVM_OPTIONS --add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
       # Needed by JBoss Marshalling
       DEFAULT_MODULAR_JVM_OPTIONS="$DEFAULT_MODULAR_JVM_OPTIONS --add-opens=java.base/java.io=ALL-UNNAMED"
+      # Needed by WildFly Http Client
+      DEFAULT_MODULAR_JVM_OPTIONS="$DEFAULT_MODULAR_JVM_OPTIONS --add-opens=java.base/java.net=ALL-UNNAMED"
       # Needed by WildFly Security Manager
       DEFAULT_MODULAR_JVM_OPTIONS="$DEFAULT_MODULAR_JVM_OPTIONS --add-opens=java.base/java.security=ALL-UNNAMED"
       # Needed for marshalling of collections
